gcc/testsuite/rust/rustc/ui/nll/issue-53040.rs
fn main() {
    let mut v: Vec<()> = Vec::new();
    || &mut v;
// { dg-error "" "" { target *-*-* } .-1 }
}

